# AI-digital-twin

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  a.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-tests.yml
.health_parquet/year=2022/month=10/: add966b0cc7142258c4b2137377e6e99-0.parquet
.health_parquet/year=2022/month=11/: add966b0cc7142258c4b2137377e6e99-0.parquet
.health_parquet/year=2022/month=12/: add966b0cc7142258c4b2137377e6e99-0.parquet
.health_parquet/year=2022/month=5/: add966b0cc7142258c4b2137377e6e99-0.parquet
.health_parquet/year=2022/month=6/: add966b0cc7142258c4b2137377e6e99-0.parquet
app/: config.py  database.py  logging_config.py  main.py  runtime.py
app/middleware/: logging.py
app/models/: __init__.py  conversation.py  interviewers.py  persona_model.py
app/routers/: auth.py  conversation.py  personas.py
app/schemas/: conversation.py  interviewers.py  persona.py
app/services/: conversation_service.py  interviewers_service.py  persona_service.py
app/utils/: conversation.py  dependencies.py  security.py
app/websocket/: manager.py  routes.py  schemas.py
data/: explore_data.py  partion_data.py
persona/: persona_correia.json
src/: main.py  tools.py
src/chatbot/: chat_graph.py  chroma_setup.py  example.py  rag_agent.py  tes_rag.py
src/configs/: groq_config.py
src/digital-twin-ui/: .env.production  Dockerfile  package-lock.json  package.json
src/digital-twin-ui/src/: App.jsx  index.js  styles.css
src/llm/: llm.py
src/personas/: persona.py
src/personas_json/: JSON_template.json  persona_francisco.json  persona_garcia.json  persona_rafael.json
src/utils/: select_persona.py
tests/: conftest.py  pytest_configure.py  test_debug_persona.py
tests/auth/: test_auth_api.py  test_auth_service.py  test_database_connection.py  test_security.py
tests/conversations/: test_conversation_api.py  test_conversation_coverage.py  test_conversation_utils.py
tests/personas/: factories.py  test_persona_api.py  test_persona_service.py
(+62 files in other folders)
